Fix skills header alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -405,7 +405,7 @@
 	}
 
 	.\36 u, .\36 u\24 {
-		/*width: 50%;*/
+		width: 50%;
 		clear: none;
 		margin-left: 0;
 	}
@@ -3431,3 +3431,11 @@
 			}
 
 	}
+
+.skills-icons {
+	width: 100%;
+}
+
+.skills-header {
+	width: 100%;
+}
